--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -49,6 +49,6 @@ jobs:
       - name: Output contents of dist
         run: ls
       - name: Output filename
-        run: echo "${{ needs.buld.output.script-file }}"
+        run: echo "${{ needs.build.outputs.script-file }}"
       - name: Deploy
         run: echo "Deploying..."
